2011-04-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3213591 ] Local intf client abort abnormally on enum filter syntax err
	(patch by cpoblete)

2011-04-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c, providerDrv.c:
	[ 3261868 ] Enum CQL filter on NULL cause incorrect rsp
	(based on patch by cpoblete)

2011-04-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sqlLexer.l, sqlParser.y, sqlStatement.c, sqlStatement.h, Makefile.am:
	[ 3175888 ] Remove JDBC support from SFCB 1.4.x 

2011-04-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* elementCapabilitiesProvider.c:
	[ 3265502 ] CMPIContext not released in elementCapabilitiesProvider

2011-03-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c
	[ 3206663 ] Enum CQL filter on NULL cause segfault and incorrect rsp
	(based on patch by  cpoblete)

2011-03-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c:
	[ 3038078 ] Can create indication filters and destinations w/o key props

2011-03-22  Narasimha Sharoff <nsharoff@us.ibm.com>

	* cimcClientSfcbLocal.c
	[ 2990315 ] cmciRelease not called in case of error 
	(patch by Klaus Kampf)

2011-03-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3202420 ] CDATA value in a string property is improperly XML escaped
	(patch by Chris Poblete)

2011-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBasicPAMAuthentication.c: 
	[ 3203290 ] Basic Auth Should Consider Expired Passwords

2011-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, README:
	[ 3177587 ] create sfcCommon library
	Rollback changes for a devel branch.

2011-02-28 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, README, most .c files:
	[ 3177587 ] create sfcCommon library

2011-02-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c: